--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "^7.5",
-        "symfony/dom-crawler":"^4.2"
+        "symfony/dom-crawler":"^4.2",
+        "symfony/css-selector":"^6.0"
     }
 }
