adicionando a PSR-4 no projeto

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
         "guzzlehttp/guzzle": "^7.5",
         "symfony/dom-crawler":"^4.2",
         "symfony/css-selector":"^6.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Buscador\\BuscadorDeCursos\\":"src/"
+        }
     }
 }
